last minut changes to css in crews - fixed problems with z-index

--- a/client/app/crew/crew.css
+++ b/client/app/crew/crew.css
@@ -1,19 +1,38 @@
-.skeletonBackgroundLogo {
+.fireBigWallpaper {
   position: fixed;
-	width: 100%;
-	height: 100%;
-  bottom: 450px;
-  right: -3px;
-	opacity: 0.7;
+	width: 25%;
+	height: auto;
+  top: -500px;
+  right: -150px;
+	opacity: 0.4;
+  z-index: 0;
 }
 
-.fireBackgroundLogo {
+.fireSmallWallpaper {
   position: fixed;
-	width: 90%;
-	height: 90%;
-  top: -490px;
-  right: -750px;
-	opacity: 0.4;
+	width: 15%;
+	height: auto;
+  top: -150px;
+  right: -53px;
+	opacity: 0.3;
+}
+
+.mkCoinWallpaper {
+  position: fixed;
+	width: 7%;
+	height: auto;
+  bottom: 710px;
+  right: 25px;
+	opacity: 0.5;
+}
+
+.streetFighterWallpaper {
+  position: absolute;
+	width: 6%;
+	height: auto;
+  bottom: 72px;
+  right: 25px;
+	opacity: 0.5;
 }
 
 .welcome {
